# rl-grpo

./: .gitignore  GAME_DEMO_ARGS.md  GAME_INFERENCE_README.md  OPTIMIZATION_SUMMARY.md  README.md  REWARD_ALGORITHM.md  REWARD_TESTS.md  TRAINING_ARGS.md  TRAINING_STABILITY_FIXES.md  TRAJECTORY_TESTS.md  conftest.py  debug_grpo.py  game_inference.py  grpo_fruits_catcher.py  main.py  pyproject.toml  reward_demo.py  run_game_demo.py
tests/: __init__.py  test_grpo_fruits_catcher.py  test_train_epoch.py
