[project]
name = "simple_grpo"
version = "0.1.0"
description = "Simple GRPO demostration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "matplotlib",
  "numpy==1.26.4" ,
  "pytest",
  "pygame==2.6.1",
  "tqdm",
  "tensorboard"
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
